# bookstore1

./: .gitignore  README.md  docker-compose.yml  env.dev  makefile  pyproject.toml
.github/workflows/: build.yml  workflow-pr-yml
bookstore/: settings.py  urls.py  views.py
order/: tests.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  orde_serializer.py  order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: tests.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/test/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
