[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Reinaldo Dos Santos",email = "reinaldosantos.rs627@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "gitpython (>=3.1.46,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
